--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -1,7 +1,26 @@
-{% extends 'admin_layout.html' %} 
+{% extends 'admin_layout.html' %}
+
 {% block content %}
   <!-- Admin Dashboard -->
   <div class="container">
+    <!-- Flash Messages -->
+{% with messages = get_flashed_messages(with_categories=true) %}
+{% if messages %}
+  <div class="alert alert-{{ messages[0][0] }}" id="flashMessage">
+    {% for category, message in messages %}
+      <p>{{ message }}</p>
+    {% endfor %}
+  </div>
+  <script>
+    // Set timeout to hide flash message after 5 seconds (5000 ms)
+    setTimeout(function() {
+      document.getElementById('flashMessage').style.display = 'none';
+    }, 2000);
+  </script>
+{% endif %}
+{% endwith %}
+
+
     {% if subjects %}
       <div class="row">
         {% for subject in subjects %}
@@ -10,12 +29,8 @@
             <div class="card">
               <img src="/static/images/R.png" class="card-img-top" alt="Subject 1" />
               <div class="card-body">
-                <h5 class="card-title">
-                  {{ subject.name }}
-                </h5>
-                <p class="card-text">
-                  {{ subject.description }}
-                </p>
+                <h5 class="card-title">{{ subject.name }}</h5>
+                <p class="card-text">{{ subject.description }}</p>
                 <div class="d-flex justify-content-between">
                   <!-- Edit button for subject -->
                   <a href="/edit_subject/{{ subject.id }}/{{ name }}" class="btn btn-warning btn-sm">Edit</a>
@@ -38,9 +53,7 @@
                           <td>{{ chapter.id }}</td>
                           <td>{{ chapter.name }}</td>
                           <td>
-                            <!-- Edit button for chapter -->
                             <a href="/edit_chapter/{{ chapter.id }}/{{ name }}" class="btn btn-warning btn-sm">Edit</a>
-                            <!-- Delete button for chapter -->
                             <a href="/delete_chapter/{{ chapter.id }}/{{ name }}" class="btn btn-danger btn-sm" 
                                onclick="return confirm('Are you sure you want to delete this chapter?')">Delete</a>
                           </td>
@@ -71,5 +84,5 @@
     <div class="center">
       <a href="/add_subjects/{{ name }}" type="button" class="btn btn-primary">+ Add New Subject</a>
     </div>
-  </div> 
+  </div>
 {% endblock %}
