--- a/templates/user_dashboard.html
+++ b/templates/user_dashboard.html
@@ -2,7 +2,6 @@
 
 {% block content %}
     <div class="container mt-4">
-        <!-- Center the heading dynamically -->
         <div class="d-flex justify-content-center align-items-center flex-column">
             <h2 class="text-center">Upcoming Quizzes</h2>
         </div>
@@ -20,12 +19,11 @@
                             <i class="far fa-calendar-alt"></i> Scheduled Date: {{ quiz.date_of_quiz.strftime('%d/%m/%Y') }}<br>
                             <i class="far fa-clock"></i> Duration: {{ quiz.time_duration }} minutes
                         </p>
-                        
                         <div class="btn-spacing">
-                            <a href="/view_quiz/{{ quiz.id }}" class="btn btn-info btn-lg w-100">
+                            <a href="/view_quiz/{{ quiz.id }}/{{ name }}" class="btn btn-info btn-lg w-100">
                                 <i class="fas fa-eye"></i> View Quiz
                             </a>
-                            <a href="/start_quiz/{{ quiz.id }}" class="btn btn-success btn-lg w-100 mt-2">
+                            <a href="/start_quiz/{{ quiz.id }}/{{ name }}" class="btn btn-success btn-lg w-100 mt-2">
                                 <i class="fas fa-play"></i> Start Quiz
                             </a>
                         </div>
