--- a/templates/user_layout.html
+++ b/templates/user_layout.html
@@ -23,7 +23,7 @@
         <span class="navbar-brand text-white" style="font-weight: bold;">Welcome {{ name[:-10] | title}}</span>
         <div class="collapse navbar-collapse" id="collapsibleNavId">
           <ul class="navbar-nav me-auto mt-2 mt-lg-0">
-            <li class="nav-item"><a class="nav-link text-white" href="user_dashboard.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="/user_dashboard/{{name}}">Home</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="#">Summary</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="#">Scores</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="/login">Logout</a></li>
